<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">OpenPods</string>

    <string name="bg_noti_channel" tools:ignore="MissingTranslation">Background Notification</string>
    <string name="bg_noti_title" tools:ignore="MissingTranslation">Running in the background</string>
    <string name="bg_noti_text" tools:ignore="MissingTranslation">Click to open notification settings</string>

    <string name="intro_title">This app lets you check the status of your AirPods on any Android device</string>
    <string name="intro_message">To operate, we need permission to use Bluetooth LE (Location) and permission to run in background</string>
    <string name="intro_allow">Allow</string>
    <string name="intro_step" tools:ignore="MissingTranslation">Step</string>
    <string name="intro_bt_perm" tools:ignore="MissingTranslation">Bluetooth Permissions</string>
    <string name="intro_bat_perm" tools:ignore="MissingTranslation">Battery Optimization</string>
    <string name="intro_loc1_perm" tools:ignore="MissingTranslation">Location Permission</string>
    <string name="intro_loc2_perm" tools:ignore="MissingTranslation">Background Location Permission</string>
    <string name="intro_notif_perm" tools:ignore="MissingTranslation">Notification Permission</string>
    <string name="msg_bt_perm" tools:ignore="MissingTranslation">Bluetooth permissions not granted, please enable them in settings.</string>
    <string name="msg_loc1_perm" tools:ignore="MissingTranslation">Location permission not granted, please enable it in settings.</string>
    <string name="msg_loc2_perm" tools:ignore="MissingTranslation">Background Location permission not granted, please enable it in settings.</string>
    <string name="msg_notif_perm" tools:ignore="MissingTranslation">Notification Permission not granted, please enable it in settings.</string>

    <string name="main_description">The app will show a notification when your AirPods are connected</string>
    <string name="supportedDevicesTitle">Supported Devices</string>

    <string-array name="supported_devices">
        <item>Apple AirPods 1st gen</item>
        <item>Apple AirPods 2nd gen</item>
        <item>Apple AirPods 3rd gen</item>
        <item>Apple AirPods Pro</item>
        <item>Apple AirPods Pro 2</item>
        <item>Apple AirPods Pro 3</item>
        <item>Apple AirPods Max</item>
        <item>Beats X</item>
        <item>Beats Flex</item>
        <item>Beats Solo 3</item>
        <item>Beats Studio 3</item>
        <item>Powerbeats 3</item>
        <item>Powerbeats Pro</item>
    </string-array>

    <string name="airpods1">&#8226; Apple AirPods 1st gen</string>
    <string name="airpods2">&#8226; Apple AirPods 2nd gen</string>
    <string name="airpods3" tools:ignore="MissingTranslation">&#8226; Apple AirPods 3rd gen</string>
    <string name="airpodspro">&#8226; Apple AirPods Pro</string>
    <string name="airpodspro2" tools:ignore="MissingTranslation">&#8226; Apple AirPods Pro 2</string>
    <string name="airpodspro3" tools:ignore="MissingTranslation">&#8226; Apple AirPods Pro 3</string>
    <string name="airpodsmax">&#8226; Apple AirPods Max</string>
    <string name="beatsx">&#8226; Beats X</string>
    <string name="beatsflex">&#8226; Beats Flex</string>
    <string name="beatssolo3">&#8226; Beats Solo 3</string>
    <string name="beatsstudio3">&#8226; Beats Studio 3</string>
    <string name="powerbeats3">&#8226; Powerbeats 3</string>
    <string name="powerbeatspro">&#8226; Powerbeats Pro</string>

    <string name="miui_warning" tools:ignore="MissingTranslation">MIUI detected</string>
    <string name="miui_warning_desc" tools:ignore="MissingTranslation">The ROM running on this device has known compatibility issues. You can continue but OpenPods may not work properly.</string>
    <string name="miui_warning_continue" tools:ignore="MissingTranslation">Continue</string>

    <string name="noBtText">It looks like this device doesn\'t have Bluetooth LE</string>

    <string name="settings" tools:ignore="MissingTranslation">Settings</string>
    <string name="batterySaver">Battery saver (Not recommended)</string>
    <string name="batterySaver_desc">Enable this if Bluetooth uses a lot of battery</string>
    <string name="autoPause">Auto-Pause</string>
    <string name="autoPause_desc">Pause media when an earbud is removed</string>
    <string name="lowLatency">Low Latency Mode</string>
    <string name="lowLatency_desc">Prioritize Bluetooth connection speed for gaming</string>
    <string name="restart" tools:ignore="MissingTranslation">Restart Service</string>
    <string name="restart_desc" tools:ignore="MissingTranslation">Do this if the notification is not showing</string>

    <string name="about">About</string>
    <string name="about_dev">Developed by Federico Dossena and Itai Levin</string>
    <string name="fdroid" translatable="false">F-Droid</string>
    <string name="website">Website</string>
    <string name="github" translatable="false">Github</string>
    <string name="donate">Donate</string>

    <string name="fdroid_url" translatable="false">https://f-droid.org/packages/com.dosse.airpods/</string>
    <string name="website_url" translatable="false">https://fdossena.com/?p=openPods/index.frag</string>
    <string name="github_url" translatable="false">https://github.com/adolfintel/OpenPods</string>
    <string name="donate_url" translatable="false">https://paypal.me/sineisochronic</string>
</resources>
